mType/tests/testFiles/error/error/scopeVariableOutOfScope.mt
if (true) {
    int x = 10;
}
int y = x;